--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Flex
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:o06iCsK31i4xnKhpPl4YCpxlppecBFjvDLySUuiS5N0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=your_database
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -57,3 +57,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TMDB_TOKEN=your_tmdb_token
+
+GOOGLE_CLIENT_ID="your_google_client_id"
+GOOGLE_CLIENT_SECRET="your_google_secret_id"
+
+STRIPE_SK=sk_test_your_stripe_secret_key
+STRIPE_PK=pk_test_your_stripe_public_key
